Fix np lists on mobile

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -478,6 +478,9 @@ div.v-subheader {
 
 .np-info .lms-list {
  height:unset!important;
+ position:unset!important;
+ top:unset!important;
+ width:unset!important;
 }
 
 .maintoolbar-player-icon {
